public/styles/style.css
/*==================-loading state-===================*/ 

@supports selector(:has(img)) {
    picture {
        background: var(--color-secondary);
        animation: shimmer 1.5s infinite;
    }
    picture:has(img[src]) {
        animation: none;
    }

    @keyframes shimmer {
        0% { opacity: 1; }
        50% { opacity: 0.5; }
        100% { opacity: 1; }
    }
} /*ik weet niet hoe ik dit kan testen*/

.img-wrapper{
    position: relative;
}

.img-wrapper--fit{
    width: fit-content;
}
.img-wrapper--hero{
    width: 100%;
}
.spinner{
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    width: 3.5rem;
    height: 3.5rem;
}

@media (prefers-reduced-motion: no-preference) {
    .spinner {
        animation: spin 1s linear infinite;
    }

    @keyframes spin {
        to { rotate: 360deg; }
    }
}

/*=====================-Header-======================*/ 
header {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: var(--spacing-sm) var(--spacing-lg) var(--spacing-sm) var(--spacing-sm);
    gap: 1rem;
    .nav-logo img {
        width: 3.5rem;
        height: auto;
    }
    .nav-toggle {
        svg{
            width: 2.5rem;
            height: auto;
        }
    }
}

/* =====================-Menu layout-===================== */
.nav-menu-layout {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
}
.nav-menu-visual {
    display: none;
}
.nav-menu-content {
    display: flex;
    flex-direction: column;
    width: 100%;
}
@media (min-width: 1025px) {
    .nav-menu-layout {
        flex-direction: row;
    }
 
    .nav-menu-visual {
        display: block;
        width: 40%;
        position: relative;
        overflow: hidden;
    }
 
    .nav-menu-visual img:first-child {
        width: 100%;
        height: 100%;
        object-fit: cover;
    }
 
    .nav-menu-logo {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 60%;
        height: auto;
        pointer-events: none;
    }
 
    .nav-menu-content {
        width: 60%;
        overflow-y: auto;
    }
}
 
/* =====================-Menu-===================== */
.nav-menu {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100dvw;
    height: 100dvh;
    overflow-y: auto;
    background-color: var(--color-secondary);
    color: var(--color-brand);
    flex-direction: column;
    gap: var(--spacing-lg);
}
.nav-menu:target,
.nav-menu.open {
    display: flex;
}
@media (prefers-reduced-motion: no-preference) {
    .nav-menu {
        left: -100%;
        transition: 0.3s ease-out;
    }
 
    .nav-menu:target,
    .nav-menu.open {
        left: 0;
 
        @starting-style {
            left: -100%;
        }
    }
}

/* =====================-Menu top-===================== */
.nav-menu-top {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 1rem;
    padding: var(--spacing-lg);
    margin-left: auto;
    width: 100%;
    max-width: 400px;
    
    .btn-search {
        text-align: center;
    }
    .btn-search svg {
        height: 1.1rem;
    }
    select {
        border: none;
        background-color: inherit;
        font-family: var(--font-secondary);
        font-size: var(--font-size-body-md);
        text-transform: uppercase;
        appearance: none;
        background-image: url("/assets/icons/arrow-down.svg");
        background-repeat: no-repeat;
        background-position: left 1.8rem center;
        background-size: 0.9rem;
        padding-right: 1.5rem;
    }
    .btn-ticket {
        word-break: break-word;
        line-height: var(--line-hight-lg);
        font-size: var(--font-size-body-lg);
        padding: var(--spacing-md);
        text-align: center;
    }
    .nav-close {
        text-align: center;
    }
}
.desktop-nav-top {
    display: none;
}
@media (min-width: 1025px) {
    .desktop-nav-top {
        display: flex;
    }
 
    .desktop-nav-top select {
        color: var(--color-secondary);
        background-image: url("/assets/icons/arrow-down-light.svg");
    }
}

/*=====================-Nav links-=====================*/
.nav-primary a,
.nav-secondary a,
.nav-utility a {
    text-decoration: none;
    background-image: linear-gradient(currentColor, currentColor);
    background-size: 0% 2px;
    background-repeat: no-repeat;
    background-position: left bottom;
    transition: background-size 0.3s ease;
    &:hover{
        background-size: 100% 2px;
    }
}
/*=====================-nav-=====================*/
.nav-primary {
    font-family: var(--font-primary);
    font-size: var(--font-size-body-3xl);
    font-weight: var(--font-weight-bold);
    margin-top: var(--spacing-xl);
    padding-right: var(--spacing-lg);
    padding-left: var(--spacing-lg);
    a::after {
        content: url("/assets/icons/arror-right.svg");
        margin-left: 1rem;
        vertical-align: middle;
        display: inline-block;
        transform: scale(0.7);
    }
}
 
.nav-secondary {
    font-family: var(--font-secondary);
    font-size: var(--font-size-body-lg);
    margin-top: var(--spacing-2xl);
    padding-right: var(--spacing-lg);
    padding-left: var(--spacing-lg);
    ul {
        display: flex;
        flex-direction: column;
        gap: var(--spacing-md);
    }
}
 
.nav-hours {
    margin-top: var(--spacing-2xl);
    padding-right: var(--spacing-lg);
    padding-left: var(--spacing-lg);
    font-size: var(--font-size-body-md);
    font-weight: var(--font-weight-bold);
}
 
.nav-utility {
    margin-top: auto;
    padding: var(--spacing-xl);
    background-color: var(--color-brand);
    color: var(--color-secondary);
    font-size: var(--font-size-body-lg);
    ul {
        display: flex;
        flex-wrap: wrap;
        gap: var(--spacing-md);
    }
}
/* ... */

